Merged FakeTopologyService classes