@@ -5,30 +5,28 @@
  */
 package com.neo4j.causalclustering.upstream.strategies;
 
-import com.neo4j.causalclustering.discovery.ClientConnectorAddresses;
-import com.neo4j.causalclustering.discovery.DatabaseReadReplicaTopology;
 import com.neo4j.causalclustering.discovery.FakeTopologyService;
-import com.neo4j.causalclustering.discovery.ReadReplicaInfo;
 import com.neo4j.causalclustering.discovery.TopologyService;
 import com.neo4j.causalclustering.identity.MemberId;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.neo4j.configuration.helpers.SocketAddress;
 import org.neo4j.kernel.database.DatabaseId;
 import org.neo4j.kernel.database.TestDatabaseIdRepository;
 
 import static co.unruly.matchers.OptionalMatchers.contains;
 import static co.unruly.matchers.OptionalMatchers.empty;
-import static com.neo4j.causalclustering.upstream.strategies.ConnectToRandomCoreServerStrategyTest.fakeCoreTopology;
+import static com.neo4j.causalclustering.discovery.FakeTopologyService.memberId;
+import static java.util.Collections.singleton;
+import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.in;
 import static org.hamcrest.Matchers.is;
@@ -41,12 +39,12 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldStayWithinGivenSingleServerGroup()
     {
         // given
-        final List<String> myServerGroup = Collections.singletonList( "my_server_group" );
+        final List<String> myServerGroup = List.of( "my_server_group" );
 
-        MemberId[] myGroupMemberIds = UserDefinedConfigurationStrategyTest.memberIDs( 10 );
-        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, Collections.singletonList( "your_server_group" ) );
+        Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
+        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, List.of( "your_server_group" ) );
 
-        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, myGroupMemberIds[0] );
+        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, memberId( 0 ) );
 
         // when
         Optional<MemberId> memberId = strategy.upstreamMemberForDatabase( DATABASE_ID );
@@ -59,12 +57,12 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldSelectAnyFromMultipleServerGroups()
     {
         // given
-        final List<String> myServerGroups = Arrays.asList( "a", "b", "c" );
+        final List<String> myServerGroups = List.of( "a", "b", "c" );
 
-        MemberId[] myGroupMemberIds = UserDefinedConfigurationStrategyTest.memberIDs( 10 );
-        TopologyService topologyService = getTopologyService( myServerGroups, myGroupMemberIds, Arrays.asList( "x", "y", "z" ) );
+        Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
+        TopologyService topologyService = getTopologyService( myServerGroups, myGroupMemberIds, List.of( "x", "y", "z" ) );
 
-        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroups, topologyService, myGroupMemberIds[0] );
+        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroups, topologyService, memberId( 0 ) );
 
         // when
         Optional<MemberId> memberId = strategy.upstreamMemberForDatabase( DATABASE_ID );
@@ -77,9 +75,9 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldReturnEmptyIfNoGroupsInConfig()
     {
         // given
-        MemberId[] myGroupMemberIds = UserDefinedConfigurationStrategyTest.memberIDs( 10 );
+        Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
         TopologyService topologyService =
-                getTopologyService( Collections.singletonList( "my_server_group" ), myGroupMemberIds, Arrays.asList( "x", "y", "z" ) );
+                getTopologyService( singletonList( "my_server_group" ), myGroupMemberIds, List.of( "x", "y", "z" ) );
         ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( Collections.emptyList(), topologyService, null );
 
         // when
@@ -93,12 +91,12 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldReturnEmptyIfGroupOnlyContainsSelf()
     {
         // given
-        final List<String> myServerGroup = Collections.singletonList( "group" );
+        final List<String> myServerGroup = List.of( "group" );
 
-        MemberId[] myGroupMemberIds = UserDefinedConfigurationStrategyTest.memberIDs( 1 );
-        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, Arrays.asList( "x", "y", "z" ) );
+        var myGroupMemberIds = singleton( memberId( 0 ) );
+        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, List.of( "x", "y", "z" ) );
 
-        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, myGroupMemberIds[0] );
+        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, memberId( 0 ) );
 
         // when
         Optional<MemberId> memberId = strategy.upstreamMemberForDatabase( DATABASE_ID );
@@ -107,38 +105,23 @@ class ConnectRandomlyToServerGroupStrategyImplTest
         assertThat( memberId, empty() );
     }
 
-    static TopologyService getTopologyService( List<String> myServerGroups, MemberId[] myGroupMemberIds, List<String> unwanted )
+    static TopologyService getTopologyService( List<String> myServerGroups, Set<MemberId> myGroupMemberIds, List<String> unwanted )
     {
-        return new FakeTopologyService( fakeCoreTopology( new MemberId( UUID.randomUUID() ) ),
-                fakeReadReplicaTopology( myServerGroups, myGroupMemberIds, unwanted, 10 ) );
-    }
+        var thisCore =  memberId( -1 );
 
-    static DatabaseReadReplicaTopology fakeReadReplicaTopology( List<String> wanted, MemberId[] memberIds, List<String> unwanted, int unwantedNumber )
-    {
-        Map<MemberId,ReadReplicaInfo> readReplicas = new HashMap<>();
+        var otherReplicas = Stream.generate( UUID::randomUUID )
+                .map( MemberId::new )
+                .limit( 10 )
+                .collect( Collectors.toSet() );
 
-        int offset = 0;
+        var allReplicas = new HashSet<>( myGroupMemberIds );
+        allReplicas.addAll( otherReplicas );
 
-        for ( MemberId memberId : memberIds )
-        {
-            readReplicas.put( memberId, new ReadReplicaInfo( new ClientConnectorAddresses( List.of(
-                    new ClientConnectorAddresses.ConnectorUri( ClientConnectorAddresses.Scheme.bolt,
-                            new SocketAddress( "localhost", 11000 + offset ) ) ) ), new SocketAddress( "localhost", 10000 + offset ),
-                    Set.copyOf( wanted ), Set.of( DATABASE_ID ) ) );
+        var topologyService =  new FakeTopologyService( singleton( thisCore ), allReplicas, thisCore,
+                singleton( TestDatabaseIdRepository.randomDatabaseId() ) );
 
-            offset++;
-        }
-
-        for ( int i = 0; i < unwantedNumber; i++ )
-        {
-            readReplicas.put( new MemberId( UUID.randomUUID() ), new ReadReplicaInfo( new ClientConnectorAddresses( List.of(
-                    new ClientConnectorAddresses.ConnectorUri( ClientConnectorAddresses.Scheme.bolt,
-                            new SocketAddress( "localhost", 11000 + offset ) ) ) ), new SocketAddress( "localhost", 10000 + offset ),
-                    Set.copyOf( unwanted ), Set.of( DATABASE_ID ) ) );
-
-            offset++;
-        }
-
-        return new DatabaseReadReplicaTopology( DATABASE_ID, readReplicas );
+        topologyService.setGroups( myGroupMemberIds, Set.copyOf( myServerGroups ) );
+        topologyService.setGroups( otherReplicas, Set.copyOf( unwanted ) );
+        return topologyService;
     }
 }
